2003-09-18  Takashi Iwai <tiwai@suse.de>

	* timidity/output.h, timidity/timidity.c, timidity/*_a.c:
	  Added the detect callback to output record.  It's used to
	  check the availability of default device and fallback devices.

2003-09-18  mput  <root@mput.dip.jp>

	* timidity/playmidi.c (note_off): Bug fix SEGV-ing for
	  non-existent instrument

2003-09-16  Saito <timidity@flashmail.com>

	* utils/getopt.h:
	  Fix around including unistd.h.
	* configs/msc-project.zip:
	  Fix utils.dsp for getopt.c.

2003-09-14  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/m2m.c (m2m_process_events): Bug Fix
	* timidity/m2m.c (vol_nonlin_to_lin): Bug Fix
	* timidity/mod2midi.c: Move all linear/non-linear MOD volume
	  conversion stuff into m2m.c
	* timidity/playmidi.c (recompute_amp): Use linear volume curves
	  when playing MOD files
	* timidity/playmidi.c (new_chorus_voice_alternate): Use
	  IS_CURRENT_MOD_FILE to check for MOD file types instead of
	  checking specifically for IS_MOD_FILE and IS_S3M_FILE

2003-09-13  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c:
	  Rewrite help a little

2003-09-13  Kentaro Sato <kentaro@a02.itscom.net>

	* timidity/readmidi.c (recompute_insertion_effect): Bug fix.

2003-09-12  Takashi Iwai <tiwai@suse.de>

	* timidity/playmidi.h, timidity/timidity.c, interface/alsaseq_c.c:
	  Added --realtime-priority and --sequencer-ports options for
	  ALSA sequencer interface.
	* Drop root privilege after chaging RT-priority.
	* Enable background option only when ALSA seq. interface is
	  built in.

2003-09-12  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/playmidi.c (new_chorus_voice_alternate): Revert
	  surround chorus delay back again (to 0.003)
	  (midi_drumpart_change): set/unset drumchannel info

2003-09-12  mput <root@mput.dip.jp>

	* timidity/playmidi.c : Remove C++ style ``//'' comments

2003-09-09  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/playmidi.c (new_chorus_voice_alternate) : Revert